Add input fields to UI
Co-authored-by: Chris Yoon <chy.yoon@gmail.com>

--- a/Madlibs/Views/Home/Form.cshtml
+++ b/Madlibs/Views/Home/Form.cshtml
@@ -8,11 +8,28 @@
   <body>
     <h1>Choose your words!</h1>
     <form action="/Madform" method="post">
-     <label for="noun">Noun:</label>
-     <input id="noun" name="noun" type="text">
-     <!-- <label for="recipient">Recipient's Name</label>
-     <input id="recipient" name="recipient" type="text"> -->
-     <button type="submit">Go!</button>
+      <label for="noun">Noun:</label>
+      <input id="noun" name="noun" type="text"><br>
+  
+      <label for="verb">Verb:</label>
+      <input type="text" name="verb" id="verb"><br>
+
+      <label for="adverb">Adverb:</label>
+      <input type="text" name="adverb" id="adverb"><br>
+
+      <label for="adjective">Adjective:</label>
+      <input type="text" name="adjective" id="adjective"><br>
+
+      <label for="noun2">Noun:</label>
+      <input type="text" name="noun2" id="noun2"><br>
+
+      <label for="noun3">Noun:</label>
+      <input type="text" name="noun3" id="noun3"><br>
+
+      <label for="adjective2">Adjective:</label>
+      <input type="text" name="adjective2" id="adjective2"><br>
+
+      <button type="submit">Go!</button>
     </form>
   </body>
 </html>
