--- a/Madlibs/Views/Home/Madform.cshtml
+++ b/Madlibs/Views/Home/Madform.cshtml
@@ -1,8 +1,7 @@
 <h1>Day at the Zoo</h1>
 <p>Today I went to the zoo. I saw a(n)<em> @Model.Noun </em> (Noun1) jumping up and down in its tree.</p>
-<p>He _____________(verb1, past tense) __________(adverb1) through the large tunnel that led to its _______(adjective1)
-____ (noun2).</p> 
-<p>I got some peanuts and passed them through the cage to a gigantic gray _______(noun3)
+<p>He @Model.Verb (verb, past tense) @Model.Adverb (adverb1) through the large tunnel that led to its @Model.Adjective (adjective1) @Model.Noun2 (noun2).</p>
+<p>I got some peanuts and passed them through the cage to a gigantic gray @Model.Noun3 (noun3)
 towering above my head.</p>
-<p>Feeding that animal made me hungry. I went to get a __________(adjective2) scoop
+<p>Feeding that animal made me hungry. I went to get a @Model.Adjective2 (adjective2) scoop
 of ice cream.</p>
