Add remaining necessary code to fill in madlib form completely with user inputs
Co-authored-by: Chris Yoon <chy.yoon@gmail.com>

--- a/Madlibs/Views/Home/Form.cshtml
+++ b/Madlibs/Views/Home/Form.cshtml
@@ -11,7 +11,7 @@
       <label for="noun">Noun:</label>
       <input id="noun" name="noun" type="text"><br>
   
-      <label for="verb">Verb:</label>
+      <label for="verb">Past-Tense Verb:</label>
       <input type="text" name="verb" id="verb"><br>
 
       <label for="adverb">Adverb:</label>
