Fixed compilation errors
Co-authored-by: Chris Yoon <chy.yoon@gmail.com>

--- a/Madlibs/Views/Home/ZooForm.cshtml
+++ b/Madlibs/Views/Home/ZooForm.cshtml
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Choose your words!</h1>
-    <form action="/Madform" method="post">
+    <form action="/madzoo" method="post">
       <label for="noun">Noun:</label>
       <input id="noun" name="noun" type="text"><br>
   
