--- a/Madlibs/Views/Home/PizzaForm.cshtml
+++ b/Madlibs/Views/Home/PizzaForm.cshtml
@@ -6,25 +6,20 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1>Choose your zoo words!</h1>
-    <form action="/madzoo" method="post">
+      <h1>Choose your zoo words!</h1>
+    <form action="/madpizza" method="post">
+    
       <label for="noun">Noun:</label>
       <input id="noun" name="noun" type="text"><br>
-  
-      <label for="verb">Past-Tense Verb:</label>
-      <input type="text" name="verb" id="verb"><br>
-
-      <label for="adverb">Adverb:</label>
-      <input type="text" name="adverb" id="adverb"><br>
-
-      <label for="adjective">Adjective:</label>
-      <input type="text" name="adjective" id="adjective"><br>
 
       <label for="noun2">Noun:</label>
       <input type="text" name="noun2" id="noun2"><br>
 
       <label for="noun3">Noun:</label>
       <input type="text" name="noun3" id="noun3"><br>
+
+      <label for="adjective">Adjective:</label>
+      <input type="text" name="adjective" id="adjective"><br>
 
       <label for="adjective2">Adjective:</label>
       <input type="text" name="adjective2" id="adjective2"><br>
