Finalize functionality for new madlibs form and output display
Co-authored-by: Chris Yoon <chy.yoon@gmail.com>

--- a/Madlibs/Views/Home/Madpage.cshtml
+++ b/Madlibs/Views/Home/Madpage.cshtml
@@ -7,5 +7,7 @@
   <body>
     <p>LINKS TO TYPES OF MADLIBS</p>
     <a href="/zooform">MadZoo.</a>
+    <a href="/pizzaform">MadPizza.</a>
+
   </body>
 </html>
